Updates from Overleaf

--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -1044,14 +1044,14 @@ $u$-equations of the following two independent meshes
 \end{tikzpicture}
 \end{center}
 
+(better figure?)
 
-
-
-(direct proof?)
+One could use this construction of products to produce any finite product $\mathscr A_{i_1}\times \cdots \times \mathscr A_{i_k}$, and this construction is also valid for any generalized permutahderon. 
+The direct proof of this argument for $\mathscr A_n$ is using the global $u$-equations of $\mathscr A_n$. ...
 
 (Find all with perfect $u$-eq?)
 
-degenerations of $B_n$ ...
+The story of degenerations of $B_n$ is very similar. The first thing to do is to find degenerations whose big polytopes are simplices.
 
 
 \section{Stringy canonical forms and $u$-equations for generalized permutahedra}
@@ -1298,7 +1298,7 @@ The above  follows directly from the following relations amongst $u$ for each $I
 1-\prod_{I \subset J} u_{J} &=& \prod_{{J}\atop{J\cap \bar{I} \ne \emptyset}} u_{\bar{J}} \\
 1-\prod_{J \subset I} u_{\bar{J}} &=& \prod_{I \subset J} u_{J} \prod_{J \subset \bar{I} } u_{\bar{J}}
 \eea
-
+\end{enumerate}
 
 \subsection*{Braid arrangement}
 The braid arrangement in $\mathbb{R}^{n+1}$ consists of $\left({n}\atop{2}\right)$ hyperplanes 
