--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -1210,18 +1210,18 @@ It also follows from above that a face $\pi_{S_1,\cdots,S_k}$ is contained in an
 \section*{ABHY like realisation for the Permutahedron}
 The following set of equations to define the $n$-dimensional Permutahedron: 
 \bea
-C_I = (-1)^{|I|} \left( \sum_{i \in I} X_i - \sum _{{i<j}\atop{i,j \in I}} X_{ij} +\cdots + (-1)^{|I|}  X_I \right) \nonumber
+C_I = (-1)^{|I|} \left( \sum_{i \in I} F_i - \sum _{{i<j}\atop{i,j \in I}} F_{ij} +\cdots + (-1)^{|I|}  F_I \right) \nonumber
 \eea
-for all non-empty subsets $I \subset \{0,1,\cdots,n\}$ with the understanding that $C_{I} =0$ for all singlets $I$ and $X_{I} =0$ for $I=\{ 0,1,\cdots,n \}$. 
+for all non-empty subsets $I \subset \{0,1,\cdots,n\}$ with the understanding that $C_{I} =0$ for all singlets $I$ and $F_{I} =0$ for $I=\{ 0,1,\cdots,n \}$. 
 
 It is clear that
 \bea
 m= \text{No. of  C's }&=& 2^{n+1}-(n+2) \nonumber \\
-N= \text{No. of X's} &=& 2^{n+1}- 2 \nonumber 
+N= \text{No. of F's} &=& 2^{n+1}- 2 \nonumber 
 \eea
 Thus we see that $N= d+m$ as expected. We can write down the stringy integral as usual to be 
 \bea
-\int_{\mathbb{R}^{n}_{+}} \prod_{i =1}^{n} d x_i x_i^{\alpha^{'} X_i -1} \prod_{I} \left (\sum_{a\in I} x_a \right) ^{-\alpha^{'} C_I} \nonumber
+\int_{\mathbb{R}^{n}_{+}} \prod_{i =1}^{n} d x_i x_i^{\alpha^{'} F_i -1} \prod_{I} \left (\sum_{a\in I} x_a \right) ^{-\alpha^{'} C_I} \nonumber
 \eea 
 where the product is over all non-singlets $ I \subset \{0,1,\cdots,n\}$ with $x_{0} =1$.
 
@@ -1235,12 +1235,12 @@ We can write down the Newton polynomial for the Minkowski sum as $ x_1~ x_2~(1+x
 The $u$-variables can be written in terms of $x$ variables as:
 \bea
 u_1&=&\frac{x(1+x+y)}{(x+y)(1+x)}, ~ u_2 =\frac{y(1+x+y)}{(x+y)(1+y)},~ u_{12}=\frac{(x+y)}{(1+x+y)}\nonumber \\
-u^{'}_1&=&\frac{(1+y)}{(1+x+y)}, ~~~~~ u^{'}_2=\frac{(1+x)}{(1+x+y)},~~~~~ u^{'}_{12}= \frac{(1+x+y)}{(1+x)(1+y)} \nonumber
+u_{02}&=&\frac{(1+y)}{(1+x+y)}, ~~~~~ u_{01}=\frac{(1+x)}{(1+x+y)},~~~~~ u_{0}= \frac{(1+x+y)}{(1+x)(1+y)} \nonumber
 \eea
 The $u$-equations are:
 \bea
-1-u_i &=& (u^{'}_i)^2 u_j u^{'}_{12}, ~~~ 1-u_{12} = u^{'}_{1} u^{'}_{2} u^{'}_{12} \nonumber \\
-1-u^{'}_i &=& u_i u^{'}_j u_{12}, ~~~~~~~ 1-u^{'}_{12} = u_{1} u_{2} (u_{12})^2 \nonumber
+1-u_i &=& (u_{0j})^2 u_j u_{0}, ~~~ 1-u_{12} = u_{02} u_{01} u_{0} \nonumber \\
+1-u_{0 j} &=& u_i u_{0 i} u_{12}, ~~~~~~~ 1-u_{0} = u_{1} u_{2} (u_{12})^2 \nonumber
 \eea
 where $i=1$ implies $j=2$ and vice versa.
 
@@ -1250,20 +1250,20 @@ In this case the building set $B=\{ \{ 0,1,2,3\},\{ 0,1,2\},\{0,2,3\},\{0,1,3\},
 The $u$ and $u'$-variables can be written interms of $x$ variables as:
 {\scriptsize  \bea
 u_1&=&\frac{x(1+x+y)(1+x+z)(x+y+z)}{(x+y)(x+z)(1+x)(1+x+y+z)}, ~ u_2 =\frac{y(1+x+y)(1+y+z)(x+y+z)}{(x+y)(y+z)(1+y)(1+x+y+z)},~ u_{3}=\frac{z(1+x+z)(1+y+z)(x+y+z)}{(x+z)(y+z)(1+z)(1+x+y+z)},\nonumber \\
-u^{'}_1&=&\frac{(1+y+z)}{(1+x+y+z)}, ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ u^{'}_2 =\frac{(1+x+z)}{(1+x+y+z)},~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ u^{'}_{3}=\frac{(1+x+y)}{(1+x+y+z)},\nonumber \\
+u_{023}&=&\frac{(1+y+z)}{(1+x+y+z)}, ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ u_{013} =\frac{(1+x+z)}{(1+x+y+z)},~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ u_{012}=\frac{(1+x+y)}{(1+x+y+z)},\nonumber \\
 u_{12}&=&\frac{(x+y)(1+x+y+z)}{(1+x+y)(x+y+z)}, ~~~~~~~~~~~~~~~~~~ u_{23} =\frac{(y+z)(1+x+y+z)}{(1+y+z)(x+y+z)},~~~~~~~~~~~~~~~~~~~ u_{13}=\frac{(x+z)(1+x+y+z)}{(1+x+z)(x+y+z)},\nonumber \\
-u^{'}_{12}&=&\frac{(1+z)(1+x+y+z)}{(1+y+z)(1+x+z)}, ~~~~~~~~~~~~~~~~~~ u^{'}_{23} =\frac{(1+x)(1+x+y+z)}{(1+x+y)(1+x+z)},~~~~~~~~~~~~~~~~~~~ u^{'}_{13}=\frac{(1+y)(1+x+y+z)}{(1+x+y))(1+y+z)},\nonumber  \\
-u_{123}&=&\frac{(x+y+z)}{(1+x+y+z)}, ~~~~~~~~~~~~~~~~~~~~~~~~~~~ u^{'}_{123} =\frac{(1+x+y)(1+y+z)}{(1+x)(1+y)(1+z)(1+x+y+z)}\nonumber
+u_{03}&=&\frac{(1+z)(1+x+y+z)}{(1+y+z)(1+x+z)}, ~~~~~~~~~~~~~~~~~~ u_{01} =\frac{(1+x)(1+x+y+z)}{(1+x+y)(1+x+z)},~~~~~~~~~~~~~~~~~~~ u_{02}=\frac{(1+y)(1+x+y+z)}{(1+x+y))(1+y+z)},\nonumber  \\
+u_{123}&=&\frac{(x+y+z)}{(1+x+y+z)}, ~~~~~~~~~~~~~~~~~~~~~~~~~~~ u_{0} =\frac{(1+x+y)(1+y+z)}{(1+x)(1+y)(1+z)(1+x+y+z)}\nonumber
 \eea }
 The $u$-equations in this case are:
 {\small  \bea
-1-u_i &=& u_j u_k (u_{jk})^2 (u^{'}_i)^3 (u^{'}_{ij})^2(u^{'}_{ik})^2 u^{'}_{123} \left(1+ u_i u_{ij} u_{ik} u^{'}_{j} u^{'}_{k}  u^{'}_{jk}\right), ~~ 1-u_{ij} = u_k u_{ik} u_{jk} (u^{'}_i)^2 (u^{'}_{j})^2 (u^{'}_{ij})^2 u^{'}_{ik} u^{'}_{jk} u^{'}_{123} \nonumber  \\
-1-u^{'}_i &=& u_i u_{ij} u_{ik} u^{'}_{j} u^{'}_{k}  u^{'}_{jk}, ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 1-u^{'}_{ij} = u_i u_{j}  (u_{ij})^2 u_{ik} u_{jk} (u_{123})^2 (u^{'}_{k})^2 u^{'}_{ik} u^{'}_{jk}  \nonumber \\
-1-u^{'}_{123} &=& u_1 u_{2} u_{3} (u_{12})^2 (u_{23})^2  (u_{13})^2 (u_{123})^3 \left(1+ u^{'}_{123}  u^{'}_1 u^{'}_{2} u^{'}_{3} u^{'}_{12} u^{'}_{23}  u^{'}_{13} \right), 1-u_{123} = u^{'}_1 u^{'}_{2} u^{'}_{3} u^{'}_{12} u^{'}_{23}  u^{'}_{13} u^{'}_{123}   \nonumber
+1-u_i &=& u_j u_k (u_{jk})^2 (u_{0jk})^3 (u_{0k})^2(u_{0 j})^2 u_{0} \left(1+ u_i u_{ij} u_{ik} u_{0ik} u^_{0ij}  u_{0i}\right),  1-u_{ij} = u_k u_{ik} u_{jk} (u_{0jk})^2 (u_{0ik})^2 (u_{0 k})^2 u_{0 j} u_{0 i} u_{0} \nonumber  \\
+1-u_{0 j k} &=& u_i u_{ij} u_{ik} u_{0 i k} u_{0 i j}  u_{0 i}, ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 1-u_{0 k} = u_i u_{j}  (u_{ij})^2 u_{ik} u_{jk} (u_{123})^2 (u_{0 i j})^2 u_{0 j} u_{0 i}  \nonumber \\
+1-u_{0} &=& u_1 u_{2} u_{3} (u_{12})^2 (u_{23})^2  (u_{13})^2 (u_{123})^3 \left(1+ u_{0}  u_{023} u_{013} u_{012} u_{03} u_{01}  u_{02} \right), 1-u_{123} = u_{023} u_{013} u_{012} u_{03} u_{01}  u_{02} u_{0}   \nonumber
 \eea}
 where $i,j,k \in {1,2,3}$ and $i \neq j \neq k$.
 
-The 8 facets of the 3d permutahedron corresponding to $u_i \rightarrow 0, u^{'}_i \rightarrow 0,u_{123} \rightarrow 0 ~and ~u^{'}_{123} \rightarrow 0$  are all $B_2$'s. Similarly, the 6 facets corresponding to  $u_{ij} \rightarrow 0, u^{'}_{ij} \rightarrow 0$ are all  $A^{2}_1$.
+The 8 facets of the 3d permutahedron corresponding to $u_i \rightarrow 0, u_{0jk} \rightarrow 0,u_{123} \rightarrow 0 ~and ~u_{0} \rightarrow 0$  are all $B_2$'s. Similarly, the 6 facets corresponding to  $u_{ij} \rightarrow 0, u_{0k} \rightarrow 0$ are all  $A^{2}_1$.
 
 Thus, the 3d permutahedron integral factorizes nicely on all massless poles at finite $\alpha^{'}$ !!
 We shall list a few results about permutahedra which shall be useful for later purposes: 
@@ -1657,42 +1657,9 @@ It's not symmetric when $|I|\neq |J|$.
 
 \textcolor{red}{(Prashanth: An attempt to prove $P_n$ is binary using Chi's method.)}
 
-In this section we shall try to argue that the permutahedron is a binary geometry. We shall first summarise the following facts about the permutahedron:
-\begin{enumerate}
-\item The $u$-variables for the permutahedron are: 
-\bea
-u_J &=& ~~\prod_{J \subset I} x_I^{(-1)^{|I|-|J|}} \nonumber 
-\eea
-The above relations can also be inverted to obtain $x_I$ as follows:
+In this section we shall try to argue that the permutahedron is a binary geometry.
 
-For $0 \notin I $
-\bea
-x_I &=& \frac{\prod_{I \subset J} u_{J}}{1-\prod_{I \subset J} u_{J}} \\
-\frac{1}{1+ x_I} &=& \prod_{{J}\atop{J\cap \bar{I} \ne \emptyset}} u_{\bar{J}}
-\eea
-From the above relations it is clear that taking $u_I \rightarrow 0$ for $0 \notin I$ implies $x_J \rightarrow 0$ for all $J \subset I$ and taking $u_{\bar{I}} \rightarrow 0$ implies $x_J \rightarrow \infty $ for all $I \subset J$.
-In fact we shall argue that there is unique choice of $x_I$'s which we can take to $0$ or $\infty$ which corresponds to setting only a particular $u_I \rightarrow 0$ or $u_{\bar{I}} \rightarrow 0$ respectively.
-\item From the definition of the permutahedron as a Nestohedron we know that $I$ and $J$ are :
-
-% {\bf compatible if} $I\cap J = \emptyset$ or $I\cap J \neq \emptyset$ and either $I \subset J$ or $J \subset I$
-
-% {\bf incompatible if}   $I\cap J \neq \emptyset$ or $I\cap J = \emptyset$ and neither $I \not\subset J$ or $J \not\subset I$
-
-{\bf compatible if and only if} $\{[0,n],I,J\}$ is a nested set, i.e.
-\[
-I\subset J\quad \text{or}\quad J\subset I\quad \text{or}\quad (J\cap I=\varnothing \quad \text{and}\quad J\cup I\not\in \mathscr P_n).
-\]
-For permutohedron, $J\cup I$ is always contained in $\mathscr P_n$ for any $I$ and $J$, so it's compatible if and only if $J\subset I$ or $I\subset J$.
-
-The above  follows directly from the following relations amongst $u$ for each $I$ such that $0\notin I$ :
-\bea
-1-\prod_{I \subset J} u_{J} &=& \prod_{{J}\atop{J\cap \bar{I} \ne \emptyset}} u_{\bar{J}} \\
-1-\prod_{J \subset I} u_{\bar{J}} &=& \prod_{I \subset J} u_{J} \prod_{J \subset \bar{I} } u_{\bar{J}}
-\eea
-
-% Thus, each $u_I$ is compatible with itself and incompatible with $u^{'}_I$.
-
-\item  Since, the permutahedron is permutation invariant in all $x_i$'s this should be reflected at the level of $u$'s and this is indeed the case as $u_I$ with the same $|I|$ have similar $u$'s. i.e $u_J$ can be obtained from $u_I$ for $|J|=|I|$ by interchange of some of the $x_i$'s.
+Since, the permutahedron is permutation invariant in all $x_i$'s this should be reflected at the level of $u$'s and this is indeed the case as $u_I$ with the same $|I|$ have similar $u$'s. i.e $u_J$ can be obtained from $u_I$ for $|J|=|I|$ by interchange of some of the $x_i$'s.
 
 We shall prove $\mathscr P_{n+1}$ is binary by showing that whenever we take some $u_I \rightarrow 0$ (by taking a unique set of $x_i \rightarrow 0, \infty$) then $u_J \rightarrow 1$ for $J$ incompatible with $I$ and the remaining $u$'s reduce to the $u$'s corresponding to $\mathscr P_{k-1} \times \mathscr P_{(n+1)-k}$. 
 
@@ -1779,170 +1746,91 @@ where, $J$ are all sets incompatible with $I$
  $K$ are all sets compatible with $I$ excluding itself 
  $s_J$ are positive integers. 
 
-\end{enumerate}
  
+\section*{A degeneration of ${\mathescr P_n}$ with perfect $u$-equations}
+We can also consider general Minkowski sums of non-simplices and see if these also give us any instance of polytopes with perfect $u$ equations. One such case is the following:
 
-
-
-
-
-\section*{Permutahedron}
- For $x_1,x_2, \cdots, x_{n+1} \in \mathbb{R} $ , the permutahedron $P_n(x_1,\cdots,x_{n+1})$ is a convex polytope in $\mathbb{R}^{n+1}$ defined as the convex hull of all vectors obtained from $(x_1,x_2, \cdots, x_{n+1})$ by permutations of the coordinates:
- \bea
- P_n(x_1,x_2, \cdots, x_{n+1}) = ConvexHull \{ (x_{w(1)},x_{w(2)}, \cdots, x_{w(n+1)})~ |~ w \in S_{n+1} \}, \nonumber
- \eea
- where $S_{n+1}$ is the symmetric group. 
- 
- The permutahedron has $(n+1)!$ vertices and is of dimension at most $n$ since it lies in the hyperplane 
- \bea
- H_c= \{(t_1,t_2, \cdots, t_{n+1}) | t_1 + t_2 + \cdots + t_{n+1}= c \} \subset \mathbb{R}^{n+1}, \nonumber
- \eea
-where $c= x_1+x_2+ \cdots +x_{n+1}$
-
-For $n=2$ and distinct $x_1,x_2, x_3$ the permutahedron $P_2(x_1,x_2, x_3)$ is a hexagon. If two of the $x_i$'s are equal then the permutahedron degenerates into a triangle and if $x_1= x_2 = x_3$ then its degenerates into a single point.
-
-We shall state a few results about permutahedra:
-
-{\bf Rado's theorem}: For any $x_1 \ge x_2  \cdots \ge x_{n+1}$ a point $(t_1,t_2, \cdots, t_{n+1}) \in \mathbb{R}^{n+1}$ belongs to the permutahedron $P_n(t_1,t_2, \cdots, t_{n+1})$ if and only if 
-\bea
-t_1+ \cdots +t_{n+1} = x_1 +\cdots+ x_{n+1} \nonumber
-\eea
-and for any nonemepty subset $\{i_1,\cdots,i_k \} \subset \{1,\cdots, n+1 \}$, we have 
-\bea
-t_{i_1}+ \cdots +t_{i_k} \leq x_1 +\cdots+ x_k \nonumber
-\eea
-The combinatorial structure of the permutahedron $P_n (x_1, \cdots, x_{n+1}) $ does not depend on $ x_1, \cdots, x_{n+1} $ as long as all these are distinct. 
-
-{\bf Proposition 2}: For any  $x_1> \cdots > x_{n+1} $. The $d$-dimensional faces of $P_n ( x_1, \cdots, x_{n+1 })$ are in one-to-one correspondence with the disjoint subdivisions of the corresponding set $\{x_1,\cdots, x_{n+1 }\}$ into nonempty ordered blocks $B_1 \cup B_2 \cup \cdots \cup B_{n+1-d} =\{1,\cdots,n+1 \}$. The face corresponding to $B_1,\cdots, B_{n+1-d}$ is given by the $n+1-d$ linear equations 
-\bea
-\sum_{i \in B_1\cup \cdots \cup B_k} t_i = x_1 + \cdots +x_{| B_1 \cup \cdots \cup B_k |}, ~~~ for~ k=1,\cdots,n+1-d \nonumber
+We consider the Minkowski sum of $n-1$ $A_2$'s with following Newton polynomial :
+\bea \label {new}
+\prod_{i=1}^{n} (1+x_i ) \prod_{i=1}^{n-1} (1+x_i +x_i x_{i+1}) 
 \eea 
-\section*{Generalized permutahedra}
-Generalized permutahedra are polytopes which are deformations of the usual permutahedron i.e., obtained by moving the vertices of the usual permutahedron so that the directions of all the edges are preserved though some of the edges may degenerate into points.
+This gives a family of simple $n$-dimensional polytopes with $3n-1$ facets  and Pell number $P_n$ (~recursively defined as $ P_n=2 P_{n-1} +P_{n-2}$ with $P_1=1,~ P_2=2$) of vertices which we shall call $X_n$. 
 
- Since each generalised permutahedron is obtained by parallel translation of facets of the usual permutahedron it is parametrized  by a collection $\{ z_I\}$ of $2^{n+1}-1$ coordinates, for non-empty sets of $I \subset [n+1] := \{1,\cdots,n+1 \}$
- \bea
- P_n^z(\{ z_I \}) = \left \{ (t_1, t_2, \cdots , t_{n+1}) \in \mathbb{R}^{n+1} | \sum_{i=1}^{n+1} t_i = z_{[n+1]},~ \sum_{i \in I} t_i \geq z_I, ~for ~subsets~ I  \right  \} \nonumber
- \eea
- 
- If $z_I =z_J$ whenever $|I| =|J|$, then  $ P_n^z(\{ z_I \})$ is the usual permutahedron.
- 
- 
- A different construction of the generalised permutahedron is the following :
- 
- Let, $\Delta_{[n+1]} = ConvexHull(e_1,\cdots,e_n)$ be the standard coordinate simplex in $\mathbb{R}^{n+1}$. For any $I \subset [n+1] $ let $\Delta_I =ConvexHull(e_i~|~i\in I)$ denote the face of the $\Delta_{[n+1]}$. The polytope $P_n^y(\{y_I \})$ obtained as the Minkowski sum of simplices $\Delta_I$ scaled by  parameters $y_I \geq 0$ for all nonempty subsets $I \subset [n+1]$
- \bea
- P_n^y(\{y_I \})= \sum_{I \subset[n+1]} y_I . \Delta_I  \nonumber
- \eea
-is the generalised permutahedron $P_n^z(\{z_I \})$  provided $z_I = \sum_{J \subset I} y_J  ~ for ~all~nonempty ~I \subset [n+1]$.
-Note that all generalised permutahedra cannot be written as Minkowski sum of coordinate simplices and we shall restrict ourselves to the large class of generalised permutahedra which admit such a realisation.
-\section*{Nested Complex}
-Since the combinatorial structure of the generalised permutahedron depends only on the set $B$ of nonemepty subsets $I \subset [n+1]$ such that $y_I \geq 0$ which is called the {\it building set}. We can describe the combinatorial structure when $B$ additionally satisfies the following:
+We can solve for $u$-variables for this family and we get :
+\bea
+u_1 &=& \frac{p_n}{q_n}, ~u_2 = \frac{p_{n-1}q_n}{p_{n-1,n}},~u_3 = \frac{p_{n-2}q_{n-1}}{p_{n-2,n-1}}, \cdots,
+u_{n-2} = \frac{p_1 q_2}{p_{12}}, ~u_{n-1} = \frac{p_{2}q_3}{p_{23}},~u_n = \frac{p_{3}q_{4}}{p_{34}}, \nonumber \\
+u_{n+1} &=& \frac{1}{q_1}, ~u_{n+2} = \frac{p_{12}}{q_{1}q_{2}},~u_{n+3} = \frac{q_{1}}{p_{23}}, \cdots,
+u_{3n-1} = \frac{ q_{n-1}}{p_{n-1n}} \nonumber
+\eea
+where $p_i =x_i$, $q_i= 1+x_i$ and $p_{i~i+1}=1+x_i+ x_i x_{i+1}$.
 
-\noindent(1) If $I,J \in B$ and $I \cap J \neq \phi $, then $I \cup J \in B$. \\
-(2) $B$ contains all singletons $\{ i\}$ for $i \in S$.
+The $u$ equations obtained from these $u$ variables are of three types viz. $1-u$ being the product of two, three or four $u$'s  for any $n$.  
 
-A subset $N$ in the building set $B$ is called a {\it nested set} if it satisfies the following conditions:\\
+There are exactly 4 $u$'s which have $1-u$ is product of 2 u's:
+\bea
+1-u_{1} =u_{3n-2} u_{3n-1},~
+1-u_{n-2} =u_{n+1} u_{n+3},~
+1-u_{n+1} =u_{n-2} u_{n+2},~
+1-u_{3n-1} = \begin{cases}
+u_{2} u_{3} , n=3\\
+u_{1} u_{4} , n=4\\
+u_{1} u_{2} , n\geq 5
+\end{cases} \nonumber 
+\eea
+The facets corresponding to setting any of these $u \to 0$ is $X_{n-1}$.
+
+There are exactly $n-3$ $u$'s which have $1-u$ is product of 4 u's:
+\bea
+1-u_{n+4} =u_{n} u_{n+2}u_{n+4} u_{n+6} ~~and~~
+1-u_{n+6+ 2 i} =u_{n-3-i} u_{n+4+2 i} u_{n+5+2 i} u_{n+8+2 i}~ for~i=0,\cdots,(n-5) \nonumber 
+\eea
+The facets corresponding to setting any of these $u \to 0$ is $A^{m}_1 \times X_{n-m-1}$.
+
+All the other $2n-2$ $u$'s correspond to $1-u$ is product of 3 u's and we do not yet have a complete classification of the facets.
+
+We can also replace the first the first term in the Newton polynomial \eqref{ new} with $(1+x_1+ x_2)$ and we get an identical system of $u$-equations
+
+\bea
+u_1 &=& \frac{p_n}{q_n}, ~u_2 = \frac{p_{n-1}q_n}{p_{n-1,n}},~u_3 = \frac{p_{n-2}q_{n-1}}{p_{n-2,n-1}}, \cdots,
+u_{n-3} = \frac{p_4 q_5}{p_{45}}, ~u_{n-2} = \frac{p_{1}}{q_{1}},~u_{n-1} = \frac{p_{2}q_{3}}{p_{23}},~u_{n} = \frac{p_{3}q_{4}}{p_{34}}, \nonumber \\
+u_{n+1} &=& \frac{q_2}{p_{12}}, ~u_{n+2} = \frac{q_{1}}{p_{12}},~u_{n+3} = \frac{p_{23}}{q_{2}q_{3}}, \cdots,
+u_{3n-1} = \frac{ p_{12}}{q_{1}q_{2}} \nonumber
+\eea
+where $p_i =x_i$, $q_i= 1+x_i$ and $p_{i~i+1}=1+x_i+ x_i x_{i+1}$ with $p_{12}= 1+x_1+x_2$.
+
+The $u$ equations obtained from these $u$ variables are of three types viz. $1-u$ being the product of two, three or four $u$'s  for any $n$.  
+
+There are exactly 4 $u$'s which have $1-u$ is product of 2 u's:
+\bea
+1-u_{1} =u_{3n-2} u_{3n-3},~
+1-u_{n-2} =u_{n+1} u_{3n-1},~
+1-u_{n+1} =u_{n-2} u_{n+2},~
+1-u_{3n-1} = \begin{cases}
+u_{2} u_{3} , n=3\\
+u_{1} u_{4} , n=4\\
+u_{1} u_{2} , n\geq 5
+\end{cases} \nonumber 
+\eea
+The facets corresponding to setting any of these $u \to 0$ is $X_{n-1}$.
+
+There are exactly $n-3$ $u$'s which have $1-u$ is product of 4 u's:
+\bea
+1-u_{n+3} =u_{n} u_{n+2}u_{n+5} u_{3n-1} ~~and~~
+1-u_{n+5+ 2 i} =u_{n-3-i} u_{n+3+2 i} u_{n+4+2 i} u_{n+7+2 i}~ for~i=0,\cdots,(n-5) \nonumber 
+\eea
+It would be nice to see if these also correspond to some degeneration of the associahedron or if they  are generalised permutahedra. 
+
+
+
+\newpage
+\section{Discussions}
+There are several interesting open questions, like the question of  whether degenerations of other cluster types (in particular $C_n$ and $D_n$ can also give binary geometries with (perfect?) $u$-equations.\\\\
 \noindent
-(1) For any $I,J \in N$, we either have $I \subset J$ or $J\subset I$ or $I$ and $J$ are disjoint.\\
-(2) For any collection of $k \geq 2$ disjoint subsets $J_1,J_2,\cdots, J_k \in N$ their union $J_1 \cup \cdots \cup J_k$ is not in B. \\
-(3) N contains all maximal elements of $B$.
+Though many examples of degenerations of $A_n$ and $B_n$ were products of lower dimensional objects of the same type, there were examples where we got non-trivial degenerations which did not factor. We would like to completely classify these cases and this would settle the question of identifying all the ``atoms'' of binary geometries with perfect $u$-equations. One class of examples which is certainly of both mathematical and physical interest in this context are the Stokes polytopes (and more generally Accordiohedra).
 
-The {\it nested complex} $\mathcal{N}(B)$ is defined as the poset of the set of all nested sets in $B$ ordered by inclusion.
+\section{Appendix}
 
-{\bf Theorem 1}: Let us assume that the set $B$ associated with a generalised permutahedron $P_n^{y}$ is a building set on $[n+1]$. Then the poset of faces $P_n^{y}$ ordered by reverse inclusion is isomorphic to the nested complex $\mathcal{N}(B)$. 
-
-{\bf Theorem 2}: Let us assume that the set $B$ associated with a generalised permutahedron $P_n^{y}$ is a building set on $[n+1]$. The face $P_N$ of $P_n^{y}(y_I)$ associated with the nested set $N \in \mathcal{N}(B)$ is given by:
-\bea
-P_N = \left \{ \right (t_1,\cdots,t_{n+1}) \in \mathbb{R}^{n+1} | \sum_{i \in I} t_i =y_{I}~for~I \in N; ~ \sum_{i \in J}t_i \geq y_J, for J \in B  )\}
-\eea
-In particular the dimension of the face $P_N$ equals $n+1-|N|$. 
-
-In summary the above results imply that we can look at any collection of subsets of $[n+1]$ which form a building set $B$ and associate  coordinate simplex $\Delta_I$ for each $I \in B$ and resulting Minkowski sum with positive weights $y_I$ generates a generalised permutahedron associated with the building set. Further, the number of facets of the generalised permutahedron just correspond to the set of all non-singlet elements in $B$.  
-We shall use $ \{0,1,\cdots,n \}$ instead of $[n+1]$ with $x_0 =1$ from now on. Since, the number of singlets correspond to the dimension of the generalised permutahedron this implies that:
-
-{\bf Number of facets = Number of linear equation + dimension of  gen permutahedron}
- 
-Thus, generalised permutahedra have "Big Polytope" which correspond to a simplex and we can write down the stringy canonical forms and solve for the $u$-variables and examine if they satisfy some kind of $u$-equations.
-
-Here are some interesting examples of generalised permutahedra:
-
-(1) If $B$ consists of only singlets i.e., $B=\{ \{ 0,1,\cdots,n \}, \{ 0 \},\{ 1 \},\cdots ,\{ n \} \}$ then the generalised permutahedron is a Simplex. In this case the relevant $x$ variables are $x_i,~ i=0,\cdots,n$ and $\sum_{i=0}^n x_i$. 
-The Newton polytope of the Minkowski sum is $\prod_{i=1}^{n} x_i (1+\sum_{j=1}^{n} x_j)$ and $u$-variables are 
-$u_i =\frac{ x_i}{1+\sum_{i=1}^n x_i} $
-which satisfy $\sum u_i =1$ as their only $u$-equation. \\
-
-(2) If $B= \{[i] | i=1,\cdots,n+1 \}$ is the complete flag of intervals, then $P_n({\bf Y})$ is the Stanley-Pitman polytope or Hypercube.
-The Newton polytope of the Minkowski sum is $x_1\cdots x_n (1+x_1) \cdots (1+x_1+\cdots +x_n)$ and $u$-variables are 
-$u_i =\frac{ 1}{1+\sum_{j=1}^{i} x_j} $, ~~$u^{'}_i =\frac{ \sum_{j=1}^{i} x_j}{1+\sum_{j=1}^{i} x_j} $ for $j=1,\cdots,n$ \\
-which satisfy $u_i +u^{'}_{i} =1$ as their $u$-equation. \\
-
-(3) If $B$ corresponds to all the non empty subsets of $\{0,1,\cdots,n \}$ and $Y_I =y_{|I|}$ i.e., the variables $Y_I$ are equal for all subsets of the same cardinality, then $P_n({\bf Y})$ is the usual permutahedron $P_n$. 
-
-\section*{ABHY like realisation for the Permutahedron}
-The following set of equations to define the $n$-dimensional Permutahedron: 
-\bea
-C_I = (-1)^{|I|} \left( \sum_{i \in I} X_i - \sum _{{i<j}\atop{i,j \in I}} X_{ij} +\cdots + (-1)^{|I|}  X_I \right) \nonumber
-\eea
-for all non-empty subsets $I \subset \{0,1,\cdots,n\}$ with the understanding that $C_{I} =0$ for all singlets $I$ and $X_{I} =0$ for $I=\{ 0,1,\cdots,n \}$. 
-
-It is clear that
-\bea
-m= \text{No. of  C's }&=& 2^{n+1}-(n+2) \nonumber \\
-N= \text{No. of X's} &=& 2^{n+1}- 2 \nonumber 
-\eea
-Thus we see that $N= d+m$ and hence the "Big polytope" in this case is again a simplex. We can write down the stringy integral as usual to be 
-\bea
-\int_{\mathbb{R}^{n}_{+}} \prod_{i =1}^{n} d x_i x_i^{\alpha^{'} X_i -1} \prod_{I} \left (\sum_{a\in I} x_a \right) ^{-\alpha^{'} C_I} \nonumber
-\eea 
-where the product is over all non-singlets $ I \subset \{0,1,\cdots,n\}$ with $x_{0} =1$.
-
-We can then solve for the corresponding $u's$ :
-\bea
-u_J &=& ~~\prod_{J \subset I} x_I^{(-1)^{|I|-|J|}} \nonumber \\
-u^{'}_J &=& \prod_{{0 \in I}\atop{ \{0,\cdots,n\} - I \subset J}} x_I^{(-1)^{|I|-|J|+\color{red}{mod(n, 2)}}} \nonumber
-\eea
-
-\section*{2d permutahedron}
-In this case the building set $B=\{ \{ 0,1,2\},\{ 0,1\},\{0,2\},\{1,2\},\{0\},\{1\},\{2\}\}$ and the relevant $x$ variables are $x_0=1, ~x_1=x, ~x_2=y, ~x_{01}=1+x, ~x_{02}=1+y,~ x_{12}=x+y,~ x_{012}=1+x+y$. 
-
-We can write down the Newton polynomial for the Minkowski sum as $ x_1~ x_2~(1+x_1)~(1+x_2)~(x_1+x_2)~(1+x_1+x_2)$.
-
-The $u$-variables can be written in terms of $x$ variables as:
-\bea
-u_1&=&\frac{x(1+x+y)}{(x+y)(1+x)}, ~ u_2 =\frac{y(1+x+y)}{(x+y)(1+y)},~ u_{12}=\frac{(x+y)}{(1+x+y)}\nonumber \\
-u^{'}_1&=&\frac{(1+y)}{(1+x+y)}, ~~~~~ u^{'}_2=\frac{(1+x)}{(1+x+y)},~~~~~ u^{'}_{12}= \frac{(1+x+y)}{(1+x)(1+y)} \nonumber
-\eea
-The $u$-equations are:
-\bea
-1-u_i &=& (u^{'}_i)^2 u_j u^{'}_{12}, ~~~ 1-u_{12} = u^{'}_{1} u^{'}_{2} u^{'}_{12} \nonumber \\
-1-u^{'}_i &=& u_i u^{'}_j u_{12}, ~~~~~~~ 1-u^{'}_{12} = u_{1} u_{2} (u_{12})^2 \nonumber
-\eea
-where $i=1$ implies $j=2$ and vice versa.
-Let us look at the $n=3$ example.
-
-\section*{3d permutahedron}
-In this case the building set $B=\{ \{ 0,1,2,3\},\{ 0,1,2\},\{0,2,3\},\{0,1,3\},\{1,2,3\},\{0,1\},\{0,2\},\{0,3\},\{1,2\} \\ ,\{2,3\},\{1,3\},\{0\},\{1\},\{2\},\{3\}\}$ and the relevant $x$ variables are $x_0=1, ~x_1=x, ~x_2=y, ~x_3=z, ~x_{01}=1+x, ~x_{02}=1+y,~x_{03}=1+z,~ x_{12}=x+y,~x_{13}=x+z,~x_{23}=y+z,~ x_{012}=1+x+y,~ x_{013}=1+x+z,~ x_{023}=1+y+z,~ x_{123}=x+y+z,~ x_{0123}=1+x+y+z$. \\
-
-The $u$ and $u'$-variables can be written interms of $x$ variables as:
-{\scriptsize  \bea
-u_1&=&\frac{x(1+x+y)(1+x+z)(x+y+z)}{(x+y)(x+z)(1+x)(1+x+y+z)}, ~ u_2 =\frac{y(1+x+y)(1+y+z)(x+y+z)}{(x+y)(y+z)(1+y)(1+x+y+z)},~ u_{3}=\frac{z(1+x+z)(1+y+z)(x+y+z)}{(x+z)(y+z)(1+z)(1+x+y+z)},\nonumber \\
-u^{'}_1&=&\frac{(1+y+z)}{(1+x+y+z)}, ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ u^{'}_2 =\frac{(1+x+z)}{(1+x+y+z)},~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ u^{'}_{3}=\frac{(1+x+y)}{(1+x+y+z)},\nonumber \\
-u_{12}&=&\frac{(x+y)(1+x+y+z)}{(1+x+y)(x+y+z)}, ~~~~~~~~~~~~~~~~~~ u_{23} =\frac{(y+z)(1+x+y+z)}{(1+y+z)(x+y+z)},~~~~~~~~~~~~~~~~~~~ u_{13}=\frac{(x+z)(1+x+y+z)}{(1+x+z)(x+y+z)},\nonumber \\
-u^{'}_{12}&=&\frac{(1+z)(1+x+y+z)}{(1+y+z)(1+x+z)}, ~~~~~~~~~~~~~~~~~~ u^{'}_{23} =\frac{(1+x)(1+x+y+z)}{(1+x+y)(1+x+z)},~~~~~~~~~~~~~~~~~~~ u^{'}_{13}=\frac{(1+y)(1+x+y+z)}{(1+x+y))(1+y+z)},\nonumber  \\
-u_{123}&=&\frac{(x+y+z)}{(1+x+y+z)}, ~~~~~~~~~~~~~~~~~~~~~~~~~~~ u^{'}_{123} =\frac{(1+x+y)(1+y+z)}{(1+x)(1+y)(1+z)(1+x+y+z)}\nonumber
-\eea }
-The $u$-equations in this case are:
-{\small  \bea
-1-u_i &=& u_j u_k (u_{jk})^2 (u^{'}_i)^3 (u^{'}_{ij})^2(u^{'}_{ik})^2 u^{'}_{123} \left(1+ u_i u_{ij} u_{ik} u^{'}_{j} u^{'}_{k}  u^{'}_{jk}\right), ~~ 1-u_{ij} = u_k u_{ik} u_{jk} (u^{'}_i)^2 (u^{'}_{j})^2 (u^{'}_{ij})^2 u^{'}_{ik} u^{'}_{jk} u^{'}_{123} \nonumber  \\
-1-u^{'}_i &=& u_i u_{ij} u_{ik} u^{'}_{j} u^{'}_{k}  u^{'}_{jk}, ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 1-u^{'}_{ij} = u_i u_{j}  (u_{ij})^2 u_{ik} u_{jk} (u_{123})^2 (u^{'}_{k})^2 u^{'}_{ik} u^{'}_{jk}  \nonumber \\
-1-u^{'}_{123} &=& u_1 u_{2} u_{3} (u_{12})^2 (u_{23})^2  (u_{13})^2 (u_{123})^3 \left(1+ u^{'}_{123}  u^{'}_1 u^{'}_{2} u^{'}_{3} u^{'}_{12} u^{'}_{23}  u^{'}_{13} \right), 1-u_{123} = u^{'}_1 u^{'}_{2} u^{'}_{3} u^{'}_{12} u^{'}_{23}  u^{'}_{13} u^{'}_{123}   \nonumber
-\eea}
-where $i,j,k \in {1,2,3}$ and $i \neq j \neq k$.
-
-The 8 facets of the 3d permutahedron corresponding to $u_i \rightarrow 0, u^{'}_i \rightarrow 0,u_{123} \rightarrow 0 ~and ~u^{'}_{123} \rightarrow 0$  are all $B_2$'s. Similarly, the 6 facets corresponding to  $u_{ij} \rightarrow 0, u^{'}_{ij} \rightarrow 0$ are all  $A^{2}_1$.
-
-Thus, the 3d permutahedron integral factorizes nicely on all massless poles at finite $\alpha^{'}$ !!
 \section*{4d permutahedron}
 The $u$ variables for the 4d permutahedron are:
 {\tiny
@@ -2193,174 +2081,7 @@ and for $|I| =n-2$ with $S- I = \{i, j\}$
 \eea
 The other $u$-equations are not two or three term equations and seem to be some higher  order polynomials in the corresponding $u$'s and it would be nice if we could classify all of them.
 
-\section*{Associahedra}
-If $B=\{ \{i,i+1,\cdots,j \} | 1\leq  i \leq j \leq n\}$ is the set of consecutive intervals, then $P_n({\bf Y})$ is the associahedron .
-\section*{2d associahedron as generalized permutahedron}
-In this case the building set $B=\{ \{ 0,1,2\},\{ 0,1\},\{1,2\},\{0\},\{1\},\{2\}\}$ and the relevant $x$ variables are $x_0=1, ~x_1=x, ~x_2=y, ~x_{01}=1+x,~ x_{12}=x+y,~ x_{012}=1+x+y$. 
 
-We can write down the Newton polynomial for the Minkowski sum as $ x_1~ x_2~(1+x_1)~(x_1+x_2)~(1+x_1+x_2)$.
-
-The $u$-variables can be written in terms of $x$ variables as:
-\bea
-u_1=\frac{x
-   (x+y+1)}{(x+1)
-   (x+y)},u_2=\frac{x +y}
-   {x+y+1},u_3=\frac{y}{x+y},u_4=\frac{x+1}{x+y+1},u_5=\frac{1}{x+1} \nonumber
-\eea
-The $u$-equations are:
-\bea
-1-u_1=u_3 u_5,1-u_2=u_4
-   u_5,1-u_3=u_1 u_4,1-u_4=u_2
-   u_3,1-u_5=u_1 u_2 \nonumber
-\eea
-Notice that these are precisely the $u$ equations for the ABHY realisation of $A_2$.
-\section*{3d associahedron as generalized permutahedron}
-In this case the building set $B=\{ \{ 0,1,2,3\},\{ 0,1,2\},\{1,2,3\},\{0,1\},\{1,2\},\{2,3\},\{0\},\{1\},\{2\},\{3\}\}$ and the relevant $x$ variables are $x_0=1, ~x_1=x, ~x_2=y,~x_3 =y, ~x_{01}=1+x,~ x_{12}=x+y,~x_{23}=y+z,~ x_{012}=1+x+y,~ x_{123}=x+y+z,~ x_{0123}=1+x+y+z$. 
-
-We can write down the Newton polynomial for the Minkowski sum as $ x_1~ x_2~x_3~(1+x_1)~(x_1+x_2)~(x_2+x_3)~(1+x_1+x_2)~(x_1+x_2+x_3)~(1+x_1+x_2+x_3)$. \\
-
-The $u$-variables can be written in terms of $x$ variables as:
-{\scriptsize \bea
-u_1&=&\frac{x
-   (x+y+1)}{(x+1)
-   (x+y)},~u_2=\frac{(x+y
-   )
-   (x+y+ z+1)}{(x+y+1)
-   (x+ y+z)},~u_3=\frac{x+
-   y+ z}{x+y+z +1},~u_4=
-   \frac{y}{x+z},\nonumber \\ u_5&=&\frac{
-   y
-   (x+y+z)}{(x+y)
-   (y+z)},~u_6= \frac{y+z}
-   {x+y+z},u_7=\frac{x+y+1}{x+y+z+1},u_8=\frac{x+1}{x+y+1},u_9=\frac{
-   1}{x+1} \nonumber
-   \eea}
-   and satisfy the $u$-equations 
-   \bea
-   1-u_1&=&u_5 u_6 u_9,~1-u_2=u_4
-   u_6 u_8 u_9,~1-u_3=u_7 u_8
-   u_9,~1-u_4=u_2 u_5 u_7, \nonumber \\ 1-u_5&=&u_1
-   u_4 u_8,1-u_6=u_1 u_2 u_7
-   u_8,1-u_7=u_3 u_4 u_6,1-u_8=u_2
-   u_3 u_5 u_6,1-u_9=u_1 u_2
-   u_3 \nonumber
-   \eea
-  We see again that these are precisely the $u$ equations of ABHY realisation of $A_3$ !
-  
-This is not a coincidence and it extends to all $n$ since the corresponding Newton polytope is given by $\prod_{1\leq  i \leq j \leq n} (x_i +x_{i+1}+\cdots+x_j)$ is nothing but the Loday's realisation of the associahedron which is equivalent to the ABHY type $A_n$ associahedron. 
-
-Thus remarkably both the generalised permutahedron realisation and ABHY realisation of the associahedra $A_n$ are  the same. \\
-\section*{Cyclohedra}
-If $B$  is the set of cyclic intervals, then $P_n({\bf Y})$ is a cyclohedron.
-\section*{3d cyclohedron}
-The 2d cyclohedron is the same as the 2d permutahedron as they both have the same building sets.
-
- Let us look at the 3d case. In this case the building set $B=\{ \{ 0,1,2,3\},\{ 0,1,2\},\{1,2,3\},\{2,3,0\},\{3,0,1\}, \\  \{0,1\},\{1,2\},\{2,3\},\{0,3\},\{0\},\{1\},\{2\},\{3\}\}$.
- 
- The Newton polynomial of the Minkowski sum is $x y z(1+x)(x+y)(y+z)(1+z)(1+x+y)(x+y+z)(y+z+1)(z+1+x)(1+x+y+z)$ and 
- 
- we  find the relevant $u$'s as:
-\bea
-u_1 &=&\frac{x (x+y+1)}{(x+1) (x+y)},~u_2 = \frac{(x+y) (x+y+z+1)}{(x+y+1) (x+y+z)},~u_3 = \frac{x+y+z}{x+y+z+1},~~~~~~~~~~~~~~u_4= \frac{z
-   (y+z+1)}{(z+1) (y+z)}, \nonumber \\
-   u_5 &=& \frac{y (x+y+z)}{(x+y) (y+z)},~u_6 = \frac{(y+z) (x+y+z+1)}{(y+z+1) (x+y+z)},~u_7 =
-   \frac{y+z+1}{x+y+z+1},~~~~~~~~~~~~~~~u_8= \frac{x+z+1}{x+y+z+1}, \nonumber \\
-   u_9 &=& \frac{x+y+1}{x+y+z+1},~u_{10} = \frac{(z+1) (x+y+z+1)}{(x+z+1) (y+z+1)},~u_{11}=
-   \frac{(x+1) (x+y+z+1)}{(x+y+1) (x+z+1)},~u_{12} =\frac{x+z+1}{(x+1) (z+1)} \nonumber
-\eea
-and the u-equations  are:
-\bea
-1-u_1&=&u_5 u_6 u_7^2 u_{10} u_{12},~1-u_2=u_4 u_6 u_7^2 u_8^2 u_{10}^2 u_{11} u_{12},~1-u_3=u_7 u_8 u_9 u_{10} u_{11} u_{12},~1-u_4=u_2 u_5
-   u_9^2 u_{11} u_{12}, \nonumber \\
-   1-u_5 &=& u_1 u_4 u_8^2 u_{10} u_{11},~1-u_6=u_1 u_2 u_8^2 u_9^2 u_{10} u_{11}^2 u_{12},~1-u_7=u_1 u_2 u_3 u_8 u_9
-   u_{11},~1-u_8=u_2 u_3 u_5 u_6 u_7 u_9, \nonumber \\
-   1-u_9&=&u_3 u_4 u_6 u_7 u_8 u_{10},~1-u_{10}=u_1 u_2^2 u_3^2 u_5 u_6 u_9^2 u_{11},~1-u_{11}=u_2 u_3^2 u_4
-   u_5 u_6^2 u_7^2 u_{10},~1-u_{12}=u_1 u_2 u_3^2 u_4 u_6 \nonumber
-\eea
-The $u$-equations above are that of ABHY realisation $B_3$ of the cyclohedron. This fact also generalizes to all $n$.
-
-Thus, the gen.permutahedron realisation and ABHY type $B_n$ realisation of the cyclohedron are one and the same.
-
-We can now consider several degenerations of both $A_n$ and $B_n$ and show that they are binary geometries with perfect $u$-equations.
-\newpage
-\section*{Minkowski sum of $n$ A2's }
-We can also consider general Minkowski sums of non-simplices and see if these also give us any instance of polytopes with perfect $u$ equations. One such case is the following:
-
-We consider the Minkowski sum of $n-1$ $A_2$'s with following Newton polynomial :
-\bea \label {new}
-\prod_{i=1}^{n} (1+x_i ) \prod_{i=1}^{n-1} (1+x_i +x_i x_{i+1}) 
-\eea 
-This gives a family of simple $n$-dimensional polytopes with $3n-1$ facets  and Pell number $P_n$ (~recursively defined as $ P_n=2 P_{n-1} +P_{n-2}$ with $P_1=1,~ P_2=2$) of vertices which we shall call $X_n$. 
-
-We can solve for $u$-variables for this family and we get :
-\bea
-u_1 &=& \frac{p_n}{q_n}, ~u_2 = \frac{p_{n-1}q_n}{p_{n-1,n}},~u_3 = \frac{p_{n-2}q_{n-1}}{p_{n-2,n-1}}, \cdots,
-u_{n-2} = \frac{p_1 q_2}{p_{12}}, ~u_{n-1} = \frac{p_{2}q_3}{p_{23}},~u_n = \frac{p_{3}q_{4}}{p_{34}}, \nonumber \\
-u_{n+1} &=& \frac{1}{q_1}, ~u_{n+2} = \frac{p_{12}}{q_{1}q_{2}},~u_{n+3} = \frac{q_{1}}{p_{23}}, \cdots,
-u_{3n-1} = \frac{ q_{n-1}}{p_{n-1n}} \nonumber
-\eea
-where $p_i =x_i$, $q_i= 1+x_i$ and $p_{i~i+1}=1+x_i+ x_i x_{i+1}$.
-
-The $u$ equations obtained from these $u$ variables are of three types viz. $1-u$ being the product of two, three or four $u$'s  for any $n$.  
-
-There are exactly 4 $u$'s which have $1-u$ is product of 2 u's:
-\bea
-1-u_{1} =u_{3n-2} u_{3n-1},~
-1-u_{n-2} =u_{n+1} u_{n+3},~
-1-u_{n+1} =u_{n-2} u_{n+2},~
-1-u_{3n-1} = \begin{cases}
-u_{2} u_{3} , n=3\\
-u_{1} u_{4} , n=4\\
-u_{1} u_{2} , n\geq 5
-\end{cases} \nonumber 
-\eea
-The facets corresponding to setting any of these $u \to 0$ is $X_{n-1}$.
-
-There are exactly $n-3$ $u$'s which have $1-u$ is product of 4 u's:
-\bea
-1-u_{n+4} =u_{n} u_{n+2}u_{n+4} u_{n+6} ~~and~~
-1-u_{n+6+ 2 i} =u_{n-3-i} u_{n+4+2 i} u_{n+5+2 i} u_{n+8+2 i}~ for~i=0,\cdots,(n-5) \nonumber 
-\eea
-The facets corresponding to setting any of these $u \to 0$ is $A^{m}_1 \times X_{n-m-1}$.
-
-All the other $2n-2$ $u$'s correspond to $1-u$ is product of 3 u's and we do not yet have a complete classification of the facets.
-
-We can also replace the first the first term in the Newton polynomial \eqref{ new} with $(1+x_1+ x_2)$ and we get an identical system of $u$-equations
-
-\bea
-u_1 &=& \frac{p_n}{q_n}, ~u_2 = \frac{p_{n-1}q_n}{p_{n-1,n}},~u_3 = \frac{p_{n-2}q_{n-1}}{p_{n-2,n-1}}, \cdots,
-u_{n-3} = \frac{p_4 q_5}{p_{45}}, ~u_{n-2} = \frac{p_{1}}{q_{1}},~u_{n-1} = \frac{p_{2}q_{3}}{p_{23}},~u_{n} = \frac{p_{3}q_{4}}{p_{34}}, \nonumber \\
-u_{n+1} &=& \frac{q_2}{p_{12}}, ~u_{n+2} = \frac{q_{1}}{p_{12}},~u_{n+3} = \frac{p_{23}}{q_{2}q_{3}}, \cdots,
-u_{3n-1} = \frac{ p_{12}}{q_{1}q_{2}} \nonumber
-\eea
-where $p_i =x_i$, $q_i= 1+x_i$ and $p_{i~i+1}=1+x_i+ x_i x_{i+1}$ with $p_{12}= 1+x_1+x_2$.
-
-The $u$ equations obtained from these $u$ variables are of three types viz. $1-u$ being the product of two, three or four $u$'s  for any $n$.  
-
-There are exactly 4 $u$'s which have $1-u$ is product of 2 u's:
-\bea
-1-u_{1} =u_{3n-2} u_{3n-3},~
-1-u_{n-2} =u_{n+1} u_{3n-1},~
-1-u_{n+1} =u_{n-2} u_{n+2},~
-1-u_{3n-1} = \begin{cases}
-u_{2} u_{3} , n=3\\
-u_{1} u_{4} , n=4\\
-u_{1} u_{2} , n\geq 5
-\end{cases} \nonumber 
-\eea
-The facets corresponding to setting any of these $u \to 0$ is $X_{n-1}$.
-
-There are exactly $n-3$ $u$'s which have $1-u$ is product of 4 u's:
-\bea
-1-u_{n+3} =u_{n} u_{n+2}u_{n+5} u_{3n-1} ~~and~~
-1-u_{n+5+ 2 i} =u_{n-3-i} u_{n+3+2 i} u_{n+4+2 i} u_{n+7+2 i}~ for~i=0,\cdots,(n-5) \nonumber 
-\eea
-It would be nice to see if these also correspond to some degeneration of the associahedron or if they  are generalised permutahedra. 
-\newpage
-\section{Discussions}
-There are several interesting open questions, like the question of  whether degenerations of other cluster types (in particular $C_n$ and $D_n$ can also give binary geometries with (perfect?) $u$-equations.\\\\
-\noindent
-Though many examples of degenerations of $A_n$ and $B_n$ were products of lower dimensional objects of the same type, there were examples where we got non-trivial degenerations which did not factor. We would like to completely classify these cases and this would settle the question of identifying all the ``atoms'' of binary geometries with perfect $u$-equations. One class of examples which is certainly of both mathematical and physical interest in this context are the Stokes polytopes (and more generally Accordiohedra).
  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{utphys}
 \bibliography{final}
